# ws-to-mongo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.yml  goorm.manifest
.github/workflows/: cmake.yml  docker_pusher.yml
src/: logger.h  main.cpp  msg_handler.h  subscription.json  websocket.h
